--- a/src/app/comun/dialogos/dialogos.component.sass
+++ b/src/app/comun/dialogos/dialogos.component.sass
@@ -203,9 +203,14 @@
         .textoDialogo
           padding: 3%
         .botonSiguiente
-          position: relative 
+          position: relative
           width: 30%
           height: 10vh
+        .iconoForzarFinDialogo
+          position: absolute
+          width: 5%
+          bottom: 5%
+          right: 2%
         .decoracion
           position: absolute
           height: 20%
@@ -232,7 +237,7 @@
         justify-content: center
         flex-wrap: wrap
         width: 100%
-        height: inherit 
+        height: inherit
         padding: 5% 0
         .opcion
           position: relative
@@ -282,7 +287,7 @@
           animation-duration: 20s
           animation-iteration-count: infinite
           animation-direction: alternate
-          animation-timing-function: ease-in-out 
+          animation-timing-function: ease-in-out
       .contenedorTexto
         position: absolute
         display: flex
@@ -290,7 +295,7 @@
         width: 50%
         left: 48%
         height: 75%
-        margin-top: 15px 
+        margin-top: 15px
         color: black
         .contenedorTitulo
           display: flex
@@ -382,7 +387,7 @@
         width: 50%
         left: 48%
         height: 75%
-        margin-top: 15px 
+        margin-top: 15px
         color: black
         .contenedorTitulo
           display: flex
@@ -435,7 +440,7 @@
           right: 5%
         &.retroceder
           right: 30%
-          
+
       frameComponent
         position: absolute
         z-index: 1
