--- a/src/app/comun/wave/wave.component.html
+++ b/src/app/comun/wave/wave.component.html
@@ -19,14 +19,15 @@
                 </femerge>
             </filter>
 
-
         </defs>
 
         <mask id="mascara">
             <path d='M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z' fill="white" id='gentle-wave'/>
         </mask>
 
-        <path style="filter: url(#glow)" d='M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z' id='gentle-wave'/>
+        <!--
+        <path d='M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z' id='gentle-wave'/>
+        -->
 
         <g  class='wave-bg'>
             <use stroke-width="2"  stroke='white' fill="none" x='50' xlink:href='#gentle-wave' y='0'/>
