--- a/src/app/comun/wave/wave.component.sass
+++ b/src/app/comun/wave/wave.component.sass
@@ -1,7 +1,7 @@
 
 @import "../../../variables.sass"
 
-#footer-navmenu 
+#footer-navmenu
     .wave-animation
       -webkit-transform: rotate(180deg)
       -moz-transform: rotate(180deg)
@@ -10,6 +10,7 @@
       top: 0
       height: 100%
       opacity: 0.5
+      background: transparent
 
 #footer-navmenu
     height: 100%
@@ -45,7 +46,7 @@
     position: absolute
     bottom: -10px
 
-.wave-bg 
+.wave-bg
     use
       -webkit-animation: move-forever 20s linear infinite
       animation: move-forever 20s linear infinite
@@ -55,16 +56,16 @@
 .wave-animation
     height: 5em
 
-#mascara 
+#mascara
     animation: move-forever 20s linear infinite
     animation-delay: -2s
 
-.wave-bg 
+.wave-bg
     use:nth-child(1)
       animation-delay: -3s
       //fill: rgba(100, 174, 199, 0.58)
 
-.wave-bg 
+.wave-bg
     use:nth-child(2)
       animation-delay: -2s
       animation-duration: 10s
@@ -75,7 +76,7 @@
       animation-delay: -4s
       animation-duration: 30s
 
-.wave-bg 
+.wave-bg
     use:nth-child(1)
       animation-delay: -5s
       //fill: rgba(100, 174, 199, 0.58)
