--- a/src/app/comun/barra/barra.component.html
+++ b/src/app/comun/barra/barra.component.html
@@ -2,7 +2,6 @@
 <!--   ******************* -->
 <!--      Barra Component   -->
 <!--   ******************* -->
-
 <div id="contenedorBarra" [ngClass]="orientacion">
 
 	<div id="barra">
@@ -24,13 +23,29 @@
 
         <ng-container *ngIf="tipo == 'Vida' && orientacion== 'radial'">
         <svg  class="radial" viewBox="0 0 54 80" xmlns="http://www.w3.org/2000/svg">
-              <path fill="#c10027" stroke="#ff9900" stroke-width="1" d="m 40 0 a 4 4 90 0 0 0 80 L 40 80 a 1 1 0 0 1 -5 -88 Z L 80 40 L 40 80 L 80 40" />
+              <path fill="black" stroke="#ff9900" stroke-width="1" d="m 40 0 a 4 4 90 0 0 0 80 L 40 80 a 1 1 0 0 1 -5 -88 Z L 80 40 L 40 80 L 80 40" />
+              <path [ngStyle]="{'mask': 'url(#vida'+identificador+')'}" fill="#c10027" stroke="#ff9900" stroke-width="0" d="m 40 0 a 4 4 90 0 0 0 80 L 40 80 a 1 1 0 0 1 -5 -88 Z L 80 40 L 40 80 L 80 40" />
+              <mask id="vida{{identificador}}"> <circle cx="40" cy="40" r="50" transform-origin="75% 50%" transform="rotate(-90)" fill="black"/>
+                <circle cx="40" cy="40" r="25" transform-origin="75% 50%" transform="rotate(-90)" stroke-dasharray="471" [ngStyle]="{'stroke-dashoffset': 380-(this.valor/100)*(380-314)}" stroke="white" transition="all 1s" stroke-width="50"/>
+              </mask>
+        </svg>
+        <!-- ESCUDO -->
+        <svg  class="radial" viewBox="0 0 54 80" xmlns="http://www.w3.org/2000/svg">
+              <path [ngStyle]="{'mask': 'url(#escudo'+identificador+')'}" fill="white" stroke="#ff9900" stroke-width="0" d="m 40 0 a 4 4 90 0 0 0 80 L 40 80 a 1 1 0 0 1 -5 -88 Z L 80 40 L 40 80 L 80 40" />
+              <mask id="escudo{{identificador}}"> <circle cx="40" cy="40" r="50" transform-origin="75% 50%" transform="rotate(-90)" fill="black"/>
+                <circle cx="40" cy="40" r="25" transform-origin="75% 50%" transform="rotate(-90)" stroke-dasharray="471" [ngStyle]="{'stroke-dashoffset': 380-(this.escudo/100)*(380-314)}" stroke="white" transition="all 1s" stroke-width="50"/>
+              </mask>
         </svg>
         </ng-container>
 
         <ng-container *ngIf="tipo == 'Energia' && orientacion== 'radial'">
         <svg  class="radial" viewBox="0 0 54 80" xmlns="http://www.w3.org/2000/svg">
-              <path fill="#edc522" stroke="#ff9900" stroke-width="1" d="m 70 15 q 20 25 0 50 L 75 70 Q 99 40 75 10 Z" />
+              <path fill="black" stroke="#ff9900" stroke-width="1" d="m 70 15 q 20 25 0 50 L 75 70 Q 99 40 75 10 Z" />
+              <path [ngStyle]="{'mask': 'url(#energia'+identificador+')'}" fill="#edc522" stroke="#ff9900" stroke-width="0" d="m 70 15 q 20 25 0 50 L 75 70 Q 99 40 75 10 Z" />
+              <mask id="energia{{identificador}}">
+                <circle cx="40" cy="40" r="50" transform-origin="75% 50%" transform="rotate(40)" fill="white"/>
+                <circle cx="40" cy="40" r="25" transform-origin="75% 50%" transform="rotate(40)" stroke-dasharray="471" [ngStyle]="{'stroke-dashoffset': 315+(this.valor/100)*(348-315)}" stroke="black" transition="stroke-dashoffset 1s" stroke-width="50"/>
+              </mask>
         </svg>
         </ng-container>
 
