--- a/src/app/comun/barra/barra.component.sass
+++ b/src/app/comun/barra/barra.component.sass
@@ -2,7 +2,6 @@
 @import "../../../variables.sass"
 @import "../../../breakpoints.scss"
 
-
 #contenedorBarra
     position: absolute
     box-sizing: border-box
@@ -17,10 +16,10 @@
     &.vertical
       border: #cfcfcf 1px solid
     &.radial
-      border: none 
-      box-shadow: none 
+      border: none
+      box-shadow: none
       overflow: visible
-      
+
     #barra
         position: absolute
         width: 100%
@@ -28,13 +27,13 @@
 
         .radial
           position: absolute
-          width: 100%  
+          width: 100%
           height: 100%
           overflow: visible
           opacity: 0.7
           &.energia
             right: 5%
-          
+
         .fondoBarra
             position: absolute
             width: 100%
@@ -42,6 +41,7 @@
             bottom: 0
             background-repeat: no-repeat
             background-size: 100% 100%
+            transition: all 2s
             &.escudo
                 background-color: white
             &.Vida
