--- a/src/app/comun/heroe/heroe.component.sass
+++ b/src/app/comun/heroe/heroe.component.sass
@@ -210,6 +210,32 @@
               background-image: url("../../../assets/Frames/Frame-Heroe-Detalle.png")
               background-size: 100% 100%
 
+      #contenedorBuffos
+        position: absolute
+        bottom: 12%
+        height: 25%
+        width: 60%
+        left: 13%
+        display: flex
+        flex-direction: row
+        justify-content: center
+        .buffo
+          position: relative
+          height: 100%
+          aspect-ratio: 1
+          .contadorDuracion
+            position: absolute
+            top: 0
+            left: 0
+            height: 100%
+            width: 100%
+            color: white
+          .imagenBuff
+            position: absolute
+            top: 0
+            left: 0
+            height: 100%
+            width: 100%
     #wrapperDesplegableRadial
       position: absolute
       bottom: 0
@@ -218,32 +244,34 @@
       width: 130%
       z-index: 1
 
-#contenedorBuffos
-  position: absolute
-  bottom: 12%
-  height: 25%
-  width: 60%
-  left: 13%
-  display: flex
-  flex-direction: row
-  justify-content: center
-  .buffo
-    position: relative
-    height: 100%
-    aspect-ratio: 1
-    .contadorDuracion
-      position: absolute
-      top: 0
-      left: 0
-      height: 100%
-      width: 100%
-      color: white
-    .imagenBuff
-      position: absolute
-      top: 0
-      left: 0
-      height: 100%
-      width: 100%
+      #contenedorBuffos
+        position: absolute
+        bottom: 115%
+        height: 30%
+        max-width: 100%
+        right: -5%
+        display: flex
+        flex-wrap: wrap-reverse
+        flex-direction: row
+        justify-content: center
+        transition: opacity 1s
+        .buffo
+          position: relative
+          height: 100%
+          aspect-ratio: 1
+          .contadorDuracion
+            position: absolute
+            top: 0
+            left: 0
+            height: 100%
+            width: 100%
+            color: white
+          .imagenBuff
+            position: absolute
+            top: 0
+            left: 0
+            height: 100%
+            width: 100%
 
 
 //------------------------------------------------------------------
