--- a/src/app/comun/interfaz/interfaz.component.sass
+++ b/src/app/comun/interfaz/interfaz.component.sass
@@ -11,7 +11,7 @@
     pointer-events: none
     div
         pointer-events: initial
-        
+
     .fondoNegro
         position: fixed
         top: 0
@@ -47,14 +47,14 @@ mark
   width: 8%
   display: none
 
-  &.verticalUp
-    animation: movimientoFlechaVerticalUp 1s ease infinite 
+  &.horizontalRight
+    animation: movimientoFlechaHorizontalRight 1s ease infinite
     display: block
 
   &.iconoObjetivo
-    left: 20%
-    top: 25%
-  
+    left: 40%
+    top: 5%
+
 //*************************************************
 //          Interfaz Elegir Hechizo:
 //************************************************* -->
@@ -260,7 +260,7 @@ mark
         height: 30%
         aspect-ratio: 1
         margin: auto
-        top: 5% 
+        top: 5%
         outline: solid 1px white
         overflow: hidden
         background-size: 100%
@@ -365,7 +365,7 @@ mark
       height: 10%
     .titulo
       position: relative
-      grid-area: 1 / 1 / 2 / 3 
+      grid-area: 1 / 1 / 2 / 3
       display: flex
       justify-content: center
       align-items: center
@@ -376,7 +376,7 @@ mark
       height: 100%
       display: flex
       flex-direction: column
-      grid-area: 2 / 1 / 3 / 2 
+      grid-area: 2 / 1 / 3 / 2
       justify-content: center
       align-items: center
       .personaje
@@ -413,21 +413,21 @@ mark
 
         &.vitalidad
           grid-area: 1 / 1 / 2 / 2
-        &.armadura  
+        &.armadura
           grid-area: 2 / 1 / 3 / 2
-        &.resistencia  
+        &.resistencia
           grid-area: 3 / 1 / 4 / 2
-        &.fisico  
+        &.fisico
           grid-area: 2 / 2 / 3 / 3
-        &.magico  
+        &.magico
           grid-area: 3 / 2 / 4 / 3
-        &.critico  
+        &.critico
           grid-area: 1 / 2 / 2 / 3
 
         .icono
           position: relative
           display: inline-block
-          height: 2em 
+          height: 2em
           width: 1.5em
           margin: 0 10px
         .texto
@@ -468,16 +468,16 @@ mark
           position: absolute
           display: flex
           justify-content: center
-          bottom: -20% 
+          bottom: -20%
           right: -20%
           height: 1.5em
           aspect-ratio: 1
           .fondoIndicador
             position: absolute
             width: 100%
-            filter: hue-rotate(325deg) 
+            filter: hue-rotate(325deg)
             &.ventaja
-              filter: hue-rotate(150deg) 
+              filter: hue-rotate(150deg)
           .valorIndicador
             z-index: 1
             color: white
@@ -1230,13 +1230,13 @@ mark
   to
     transform: rotateY(1980deg)
 
-@keyframes movimientoFlechaVerticalUp
+@keyframes movimientoFlechaHorizontalRight
   0%
-    transform: translateY(0%) rotate(-90deg)
+    transform: translateX(0%) rotate(0deg)
   50%
-    transform: translateY(10%) rotate(-90deg)
+    transform: translateX(10%) rotate(0deg)
   100%
-    transform: translateY(0%) rotate(-90deg)
+    transform: translateX(0%) rotate(0deg)
 
 
 
