--- a/src/app/comun/panel-equipo/panel-equipo.component.html
+++ b/src/app/comun/panel-equipo/panel-equipo.component.html
@@ -16,13 +16,13 @@
 
 		<div class="containerEstadisticas">
 			<div class="columna">
-				
+
 				<div class="estadistica">
 					<img src="../../../assets/Iconos/Icono-Vitalidad.png">
 					<div class="textoEstadisticas Texto3 Arial">
-                            Vitalidad <br>{{estadisticas.vitalidad}} 
+                            Vitalidad <br>{{estadisticas.vitalidad}}
 					</div>
-				</div>	
+				</div>
 
 				<div class="estadistica">
 					<img src="../../../assets/Iconos/Icono-Armadura.png">
@@ -35,20 +35,20 @@
 				<div class="estadistica">
 					<img src="../../../assets/Iconos/Icono-Resistencia-Magica.png">
 					<div class="textoEstadisticas Texto3 Arial">
-                            Resist. Mágica <br>{{estadisticas.resistenciaMagica}} 
+                            Resist. Mágica <br>{{estadisticas.resistenciaMagica}}
 					</div>
 				</div>
 
-			</div>	
+			</div>
 
 			<div class="columna">
 
 				<div class="estadistica">
 					<img src="../../../assets/Iconos/critico.png">
 					<div class="textoEstadisticas Texto3 Arial">
-                        Critico <br>{{estadisticas.critico}}
+                        Crítico <br>{{estadisticas.critico}}
 					</div>
-				</div>	
+				</div>
 
 				<div class="estadistica">
 					<img src="../../../assets/Iconos/Icono-Dano-Fisico.png">
@@ -56,7 +56,7 @@
                         Daño Físico <br>{{estadisticas.ad}}
 					</div>
 				</div>
-					
+
 				<div class="estadistica">
 					<img src="../../../assets/Iconos/Icono-Dano-Magico.png">
 					<div class="textoEstadisticas Texto3 Arial">
@@ -73,7 +73,7 @@
                         <ng-container *ngIf="estadisticas.multiplicadorDanoTipoArmadura != 1"> [{{estadisticas.multiplicadorDanoTipoArmadura}}%] ({{estadisticas.ad}})</ng-container>
 					</div>
 				</div>
-					
+
 				<div class="estadistica">
 					<img src="../../../assets/Iconos/Icono-Dano-Magico.png">
 					<div class="textoEstadisticas Texto3 Arial">
@@ -88,10 +88,10 @@
                         Critico <br>{{estadisticas.critico_base}}
                         <ng-container *ngIf="estadisticas.multiplicadorDanoTipoArmadura != 1"> [{{estadisticas.multiplicadorDanoTipoArmadura}}%] ({{estadisticas.critico}})</ng-container>
 					</div>
-				</div>	
+				</div>
                 -->
 
-			</div>	
+			</div>
 		</div>
 
 		<div class="titulo Texto1">Inventario</div>
@@ -104,26 +104,26 @@
 
                 <div id="contenedorListaItems">
 
-                    <div *ngFor="let objeto of perfil?.heroes[estadoApp.heroePropioPerfilIndex].objetos.inventario; let i = index" 
-                        tooltip 
-                        (accionBotonTooltip)="equipar(i)" 
-                        [tooltipTextoBoton]="'Equipar'" 
-                        [tooltipObjeto]="objeto" 
-                        tooltipPosition="top" 
+                    <div *ngFor="let objeto of perfil?.heroes[estadoApp.heroePropioPerfilIndex].objetos.inventario; let i = index"
+                        tooltip
+                        (accionBotonTooltip)="equipar(i)"
+                        [tooltipTextoBoton]="'Equipar'"
+                        [tooltipObjeto]="objeto"
+                        tooltipPosition="top"
 
                         cdkDropList
                         [cdkDropListData]="i"
                         class="contenedorImagen">
 
-                            <img 
-                                cdkDrag 
+                            <img
+                                cdkDrag
                                 (cdkDragEntered)="dragEntered($event)"
                                 [cdkDragData]="i"
                                 (cdkDragDropped)="dragDropped($event)"
                                 (cdkDragMoved)="dragMoved($event)"
-                                class="imagen" src="../../../assets/Items/{{formatearNombre(objeto.pieza)}}/{{objeto.imagen_id}}.png"/> 
+                                class="imagen" src="../../../assets/Items/{{formatearNombre(objeto.pieza)}}/{{objeto.imagen_id}}.png"/>
 
-                            <img *cdkDragPreview class="imagen" src="../../../assets/Items/{{formatearNombre(objeto.pieza)}}/{{objeto.imagen_id}}.png"/> 
+                            <img *cdkDragPreview class="imagen" src="../../../assets/Items/{{formatearNombre(objeto.pieza)}}/{{objeto.imagen_id}}.png"/>
 
                     </div>
                 </div>
@@ -132,9 +132,9 @@
                     cdkDropList
                     #eliminarObjeto="cdkDropList"
                     >
-                    <img  
-                        id="botonEliminarObjeto"    
-                        class="imagenEliminar" src="../../../assets/desarrollador/papelera.svg"/> 
+                    <img
+                        id="botonEliminarObjeto"
+                        class="imagenEliminar" src="../../../assets/desarrollador/papelera.svg"/>
                 </div>
             </div>
 
@@ -158,7 +158,7 @@
 			<div class="casco">
 				<div class="reticulaPequena">
                     <ng-container  *ngIf="equipado[0]!=null">
-                        <img tooltip (accionBotonTooltip)="desequipar(0)" [tooltipTextoBoton]="'Desequipar'" [tooltipObjeto]="equipado[0]" tooltipPosition="right" src="../../../assets/Items/{{pathImagenEquipado[0]}}"/> 
+                        <img tooltip (accionBotonTooltip)="desequipar(0)" [tooltipTextoBoton]="'Desequipar'" [tooltipObjeto]="equipado[0]" tooltipPosition="right" src="../../../assets/Items/{{pathImagenEquipado[0]}}"/>
                     </ng-container>
                         <div class="frameItem"></div>
 				</div>
@@ -167,7 +167,7 @@
 			<div class="pechera">
 				<div class="reticulaPequena">
                     <ng-container *ngIf="equipado[1]!=null">
-                        <img tooltip (accionBotonTooltip)="desequipar(1)" [tooltipTextoBoton]="'Desequipar'" [tooltipObjeto]="equipado[1]" tooltipPosition="right" src="../../../assets/Items/{{pathImagenEquipado[1]}}"/> 
+                        <img tooltip (accionBotonTooltip)="desequipar(1)" [tooltipTextoBoton]="'Desequipar'" [tooltipObjeto]="equipado[1]" tooltipPosition="right" src="../../../assets/Items/{{pathImagenEquipado[1]}}"/>
                     </ng-container>
 					<div class="frameItem"></div>
 				</div>
@@ -176,42 +176,42 @@
 			<div class="arma1">
 				<div class="reticulaGrande">
                     <ng-container *ngIf="equipado[4]!=null">
-                        <img tooltip (accionBotonTooltip)="desequipar(4)" [tooltipTextoBoton]="'Desequipar'" [tooltipObjeto]="equipado[4]" tooltipPosition="right" src="../../../assets/Items/{{pathImagenEquipado[4]}}"/> 
+                        <img tooltip (accionBotonTooltip)="desequipar(4)" [tooltipTextoBoton]="'Desequipar'" [tooltipObjeto]="equipado[4]" tooltipPosition="right" src="../../../assets/Items/{{pathImagenEquipado[4]}}"/>
                     </ng-container>
 					<div class="frameItem"></div>
 				</div>
-			</div>	
+			</div>
 
 			<div class="heroe">
 			    <img class="imagenPersonaje" src="../../../assets/Paneles/Equipo/Maniqui.png"/>
-			</div>	
+			</div>
 
 			<div class="pantalon">
 				<div class="reticulaPequena Derecha">
                     <ng-container *ngIf="equipado[2]!=null">
-                        <img tooltip (accionBotonTooltip)="desequipar(2)" [tooltipTextoBoton]="'Desequipar'" [tooltipObjeto]="equipado[2]" tooltipPosition="right" src="../../../assets/Items/{{pathImagenEquipado[2]}}"/> 
+                        <img tooltip (accionBotonTooltip)="desequipar(2)" [tooltipTextoBoton]="'Desequipar'" [tooltipObjeto]="equipado[2]" tooltipPosition="right" src="../../../assets/Items/{{pathImagenEquipado[2]}}"/>
                     </ng-container>
 					<div class="frameItem"></div>
 				</div>
-			</div>	
+			</div>
 
 			<div class="botas">
 				<div class="reticulaPequena Derecha">
                     <ng-container *ngIf="equipado[3]!=null">
-                        <img tooltip (accionBotonTooltip)="desequipar(3)" [tooltipTextoBoton]="'Desequipar'" [tooltipObjeto]="equipado[3]" tooltipPosition="right" src="../../../assets/Items/{{pathImagenEquipado[3]}}"/> 
+                        <img tooltip (accionBotonTooltip)="desequipar(3)" [tooltipTextoBoton]="'Desequipar'" [tooltipObjeto]="equipado[3]" tooltipPosition="right" src="../../../assets/Items/{{pathImagenEquipado[3]}}"/>
                     </ng-container>
 					<div class="frameItem"></div>
 				</div>
-			</div>	
+			</div>
 
 			<div class="arma2">
 				<div class="reticulaGrande">
                     <ng-container *ngIf="equipado[5]!=null">
-                        <img tooltip (accionBotonTooltip)="desequipar(5)" [tooltipTextoBoton]="'Desequipar'" [tooltipObjeto]="equipado[5]" tooltipPosition="right" src="../../../assets/Items/{{pathImagenEquipado[5]}}"/> 
+                        <img tooltip (accionBotonTooltip)="desequipar(5)" [tooltipTextoBoton]="'Desequipar'" [tooltipObjeto]="equipado[5]" tooltipPosition="right" src="../../../assets/Items/{{pathImagenEquipado[5]}}"/>
                     </ng-container>
 					<div class="frameItem"></div>
 				</div>
-			</div>	
+			</div>
 		</div>
 
 		<!-- Inventario -->
@@ -222,19 +222,19 @@
 				<div class="contenedorReticula">
 
 					<div class="reticula">
-						<img class="objeto" src="../../../assets/Items/arco/4.png"/>	
+						<img class="objeto" src="../../../assets/Items/arco/4.png"/>
 					</div>
 					<div class="reticula">
-						<img class="objeto" src="../../../assets/Items/miscelaneo/7.png"/>	
+						<img class="objeto" src="../../../assets/Items/miscelaneo/7.png"/>
 					</div>
 					<div class="reticula">
-						<img class="objeto" src="../../../assets/Items/miscelaneo/3.png"/>	
+						<img class="objeto" src="../../../assets/Items/miscelaneo/3.png"/>
 					</div>
 					<div class="reticula">
-						<img class="objeto" src="../../../assets/Items/pechera/8.png"/>	
+						<img class="objeto" src="../../../assets/Items/pechera/8.png"/>
 					</div>
 					<div class="reticula">
-						<img class="objeto" src="../../../assets/Items/miscelaneo/33.png"/>	
+						<img class="objeto" src="../../../assets/Items/miscelaneo/33.png"/>
 					</div>
 					<div class="reticula"></div>
 					<div class="reticula"></div>
@@ -242,25 +242,25 @@
 
 				</div>
 			</div>
-				
+
 			<img class="icono banco" src="../../../assets/Iconos/Icono-Banco.png" (click)="cambiarPestanaInventario('Banco')" />
 			<div class="contenedor banco">
 				<div class="contenedorReticula">
 
 					<div class="reticula">
-						<img class="objeto" src="../../../assets/Items/daga/1.png"/>	
+						<img class="objeto" src="../../../assets/Items/daga/1.png"/>
 					</div>
 					<div class="reticula">
-						<img class="objeto" src="../../../assets/Items/miscelaneo/28.png"/>	
+						<img class="objeto" src="../../../assets/Items/miscelaneo/28.png"/>
 					</div>
 					<div class="reticula">
-						<img class="objeto" src="../../../assets/Items/miscelaneo/2.png"/>	
+						<img class="objeto" src="../../../assets/Items/miscelaneo/2.png"/>
 					</div>
 					<div class="reticula">
-						<img class="objeto" src="../../../assets/Items/pechera/1.png"/>	
+						<img class="objeto" src="../../../assets/Items/pechera/1.png"/>
 					</div>
 					<div class="reticula">
-						<img class="objeto" src="../../../assets/Items/miscelaneo/29.png"/>	
+						<img class="objeto" src="../../../assets/Items/miscelaneo/29.png"/>
 					</div>
 					<div class="reticula"></div>
 					<div class="reticula"></div>
